// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Search Component should render correctly when no company is searched and fetchStatus is initial 1`] = `
.emotion-0 {
  height: 100%;
  width: 100%;
  background: transparent;
  border: transparent;
  outline: transparent;
}

<div>
  <Styled(div)>
    <Styled(span)>
      <FontAwesomeIcon
        border={false}
        className=""
        fixedWidth={false}
        flip={null}
        icon="search"
        inverse={false}
        listItem={false}
        mask={null}
        pull={null}
        pulse={false}
        rotation={null}
        size="lg"
        spin={false}
        symbol={false}
        title=""
        transform={null}
      />
    </Styled(span)>
    <input
      className="emotion-0"
      onChange={[Function]}
      type="text"
      value="Apple Inc. (AAPL)"
    />
  </Styled(div)>
</div>
`;

exports[`Search Component should render correctly when there is a search but company symbols has a failure fetch status  1`] = `
.emotion-0 {
  height: 100%;
  width: 100%;
  background: transparent;
  border: transparent;
  outline: transparent;
}

<div>
  <Styled(div)>
    <Styled(span)>
      <FontAwesomeIcon
        border={false}
        className=""
        fixedWidth={false}
        flip={null}
        icon="search"
        inverse={false}
        listItem={false}
        mask={null}
        pull={null}
        pulse={false}
        rotation={null}
        size="lg"
        spin={false}
        symbol={false}
        title=""
        transform={null}
      />
    </Styled(span)>
    <input
      className="emotion-0"
      onChange={[Function]}
      type="text"
      value="Apple Inc. (AAPL)"
    />
  </Styled(div)>
  <Styled(span)
    grey={true}
    small={true}
  >
    Cannot search Company: check connection
  </Styled(span)>
</div>
`;

exports[`Search Component should render correctly with search results 1`] = `
.emotion-0 {
  height: 100%;
  width: 100%;
  background: transparent;
  border: transparent;
  outline: transparent;
}

<div>
  <Styled(div)>
    <Styled(span)>
      <FontAwesomeIcon
        border={false}
        className=""
        fixedWidth={false}
        flip={null}
        icon="search"
        inverse={false}
        listItem={false}
        mask={null}
        pull={null}
        pulse={false}
        rotation={null}
        size="lg"
        spin={false}
        symbol={false}
        title=""
        transform={null}
      />
    </Styled(span)>
    <input
      className="emotion-0"
      onChange={[Function]}
      type="text"
      value="Apple Inc. (AAPL)"
    />
  </Styled(div)>
  <SearchResults
    onClickResult={[Function]}
    results={
      Array [
        Object {
          "name": "Apple Inc",
          "symbol": "aapl",
        },
        Object {
          "name": "Alphabet Inc",
          "symbol": "googl",
        },
      ]
    }
  />
</div>
`;
